<resources>
    <string name="app_name">Uiit Student</string>
    <string name="logo_of_uiit">Logo of Uiit</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_state">Login State</string>
    <string name="isLoggedIn">Is Logged In</string>
    <string name="attendance">Attendance</string>
    <string name="notices">Notices</string>
    <string name="study_resources">Study Resources</string>
    <string name="club_activities">Club Activities</string>
    <string name="feedback">Enter Feedback</string>
    <string name="about_us">About Us</string>
    <string name="web_portal">Web Portal</string>
    <string name="hpu_website">HPU Website</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="item_image">Item Image</string>
    <string name="item_title">Item Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_title">Notice Title</string>
    <string name="sidharth_sood">Sidharth Sood</string>
    <string name="_63001_cse_7th_sem">63001 CSE 7th Sem</string>
</resources>
