<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/loginUiitLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_of_uiit"
        app:srcCompat="@drawable/uiit_logo" />

    <TextView
        android:id="@+id/signInToContinueTextView"
        android:layout_below="@id/loginUiitLogo"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/signInToContinueTextView"
        android:id="@+id/usernameTextInputLayout"
        android:layout_marginTop="75dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="25dp"
        android:id="@+id/passwordTextInputLayout"
        android:layout_below="@+id/usernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@id/passwordTextInputLayout"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />
</RelativeLayout>